fullSandbox11072023/force-app/main/default/objects/New_Hire_Training_Record__c/New_Hire_Training_Record__c.object-meta.xml
<CustomObject>
    <label>New Hire Training Record</label>
    <nameField>
        <displayFormat>NHTR-{00000000}</displayFormat>
        <label>New Hire Training Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>New Hire Training Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>