fullSandbox11072023/force-app/main/default/objects/New_Hire_Training_Record__c/fields/LinkId__c.field-meta.xml
<CustomField>
    <fullName>LinkId__c</fullName>
    <label>LinkId</label>
    <length>64</length>
    <type>Text</type>
</CustomField>